force-app/main/default/objects/copado__Release__c/fields/Deployment_By__c.field-meta.xml
<CustomField>
    <fullName>Deployment_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>