force-app/main/default/objects/copado__Release__c/fields/Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Date__c</fullName>
    <label>Deployment Date</label>
    <type>Date</type>
</CustomField>