force-app/main/default/objects/copado__Release__c/fields/Main_Release__c.field-meta.xml
<CustomField>
    <fullName>Main_Release__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Main_Release</label>
    <referenceTo>Main_Release__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>