force-app/main/default/objects/copado__Release__c/fields/Preprod_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Preprod_Deployment_Date__c</fullName>
    <label>Preprod Deployment Start Date</label>
    <type>DateTime</type>
</CustomField>