force-app/main/default/objects/copado__Release__c/fields/Preprod_User_Story_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Preprod_User_Story_End_Date__c</fullName>
    <label>Preprod User Story End Date</label>
    <type>DateTime</type>
</CustomField>