force-app/main/default/objects/copado__Release__c/fields/Prod_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Prod_Deployment_Date__c</fullName>
    <label>Prod Deployment Date</label>
    <type>DateTime</type>
</CustomField>