force-app/main/default/objects/copado__Release__c/fields/Production_Validation_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Production_Validation_Start_Time__c</fullName>
    <label>Production Validation Start Time</label>
    <type>DateTime</type>
</CustomField>