force-app/main/default/objects/copado__Release__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>This is to store the project this release belongs to for sharing settings</description>
    <label>Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>