force-app/main/default/objects/copado__Release__c/fields/Release_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Completion_Date__c</fullName>
    <label>Release Completion Date</label>
    <type>Date</type>
</CustomField>