force-app/main/default/objects/copado__Release__c/fields/Release_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Release_Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Playbook</label>
    <referenceTo>Release_Playbook__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>