force-app/main/default/objects/copado__Release__c/fields/Release_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Start_Date__c</fullName>
    <label>Release Start Date</label>
    <type>Date</type>
</CustomField>