force-app/main/default/objects/copado__Release__c/fields/UAT_Deployment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Deployment_Start_Date__c</fullName>
    <label>UAT Deployment Start Date</label>
    <type>DateTime</type>
</CustomField>