force-app/main/default/objects/copado__Release__c/fields/UAT_User_Story_End_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_User_Story_End_Date__c</fullName>
    <label>UAT User Story End Date</label>
    <type>DateTime</type>
</CustomField>